--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.butola</groupId>
-	<artifactId>restcustomer</artifactId>
+	<artifactId>restconsumer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>restcustomer</name>
+	<name>restconsumer</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
